style.css
@import 'basscss';
@import 'basscss-btn-sizes';

html, body, #main {
    height: 100vh;
    width: 100vw;
    overflow: none;
}

.bg-main {
    background-color: #F5F1E8;
}

.x-axis path,
.y-axis path {
    fill: none;
    stroke: black;
    stroke-width: 1;
}

.brush .extent {
    fill: rgba(142, 178, 213, 0.6);
    stroke: #666;
    stroke-width: 1px;
}

.squares-overlay rect:hover {
    stroke: red;
    stroke-width: 1px;
}


.CellShape {
    stroke: #999;
    stroke-width: 1px;
}
.CellShape:hover {
    fill: #b9d0e7;
}


.GeneRow:hover,
.GeneRow--selected {
    background: #b9d0e7;
}

